<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AVRDroid</string>
    <string name="versionName">1.5</string>
    <string name="version">Version:</string>
    <string name="status_not_connected">No Connection</string>
    <string name="label_bt_send">Send</string>
    <string name="label_bt_connect">Reset</string>
    <string name="status_connected">AVR is connected</string>
    <string name="label_bt_read">Get</string>
    <string name="label_bt_dump">Dump</string>
    <string name="label_bt_clear">Clear</string>
    <string name="label_bt_setget">Send/Get</string>
    <string name="op_menu_about">About</string>
    <string name="op_menu_settings">Settings</string>
    <string name="op_menu_reconnect">Reconnect</string>
    <string name="pref_cat_connect">Connection settings</string>
    <string name="pref_cat_connect_addr">IP address</string>
    <string name="pref_cat_connect_addr_summary">Enter local network address of AV receiver</string>
    <string name="pref_cat_connect_addr_default">127.0.0.1</string>
    <string name="pref_cat_connect_port">TCP/IP port</string>
    <string name="pref_cat_connect_port_summary">Enter port number (should be left untouched)</string>
    <string name="pref_cat_connect_port_default">23</string>
    <string name="pref_cat_extras">Extras</string>
    <string name="pref_cat_extras_broadcast">Enable broadcast receiver</string>
    <string name="pref_cat_extras_broadcast_summary">Allow other apps to send commands via broadcast receiver</string>
    <string name="op_menu_shell">AVR shell</string>
    <string name="app_shell">AVR shell</string>
    <string name="error_no_layout_file">Could not load a valid layout file. Please select or import a layout file from the menu.</string>
    <string name="op_menu_import">Import</string>
    <string name="toast_import_no_activity_found">Install a file manager to import files.</string>
    <string name="toast_import_file_not_found">The file could not be opened.</string>
    <string name="toast_no_valid_xml_file">This seams to be no valid XML layout format.</string>
    <string name="toast_could_not_write_file">The layout could not be saved.</string>
    <string name="toast_media_not_mounted">Storage media seams to be not mounted.</string>
    <string name="op_menu_save">Save</string>
    <string name="op_menu_select">Select</string>
    <string name="op_menu_share">Share</string>
    <string name="dialog_save">Enter layout name</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_select_warning">Have you saved the current layout?</string>
    <string name="button_continue">Continue</string>
    <string name="pref_cat_gui">User interface settings</string>
    <string name="pref_cat_gui_enable_select_warning">Layout selection</string>
    <string name="pref_cat_gui_enable_select_warning_summary">Always  remind me of saving the current layout</string>
    <string name="toast_no_connection">No connection to AV receiver.</string>
    <string name="pref_cat_gui_tabcolor">Tab bar color</string>
    <string name="pref_cat_gui_tabcolor_summary">Set the tab bar color</string>
    <string name="pref_cat_gui_tabcolor_default">Blue</string>
    <string name="pref_cat_gui_buttoncolor">Text color</string>
    <string name="pref_cat_gui_buttoncolor_summary">Set the text color</string>
    <string name="pref_cat_gui_buttoncolor_default">White</string>
    <string name="pref_cat_gui_textsize">Text size</string>
    <string name="pref_cat_gui_textsize_summary">Set the text size</string>
    <string name="pref_cat_gui_useicons_summary">Show icons instead of text labels</string>
    <string name="pref_cat_gui_useicons">Show icons</string>
    <string name="pref_cat_gui_screenlock_summary">Enables swipe up/down gesture to lock screen (stay fullscreen, always on, locked orientation). Better kept disabled in scrolling layouts.</string>
    <string name="pref_cat_gui_screenlock">Screen lock swipe gesture</string>
    <string name="pref_cat_gui_grid_summary">Show vertical and horizontal dividers</string>
    <string name="pref_cat_gui_grid">Show grid</string>
    <string name="filelist_default">Default layout</string>
    <string name="filelist_default_name">The built-in default layout</string>
    <string name="filelist_default_state">Default state layout</string>
    <string name="filelist_default_state_name">Built-in layout with state logic</string>
    <string name="dialog_share">Share layout XML code as</string>
    <string name="dialog_share_plaintext">Plain text</string>
    <string name="dialog_share_file">XML file</string>
    <string name="dialog_share_chooser">Share to</string>
    <string name="op_menu_edit">View/Edit</string>
    <string name="edit_chooser">Edit with</string>
    <string name="hint_edit_file">Hint: Please save edited file to shared storage and import from there.</string>
    <string name="import_positive">Layout imported. Select it from the menu.</string>
    <string name="import_negative">No Layout imported.</string>
    <string name="dialog_import">Import layout</string>
    <string name="dialog_import_positive">Save</string>
    <string name="dialog_import_negative">Cancel</string>
    <string name="cmenu_show_comment">Show comment</string>
    <string name="cmenu_edit_label">Edit label</string>
    <string name="cmenu_edit_icon">Edit icon</string>
    <string name="cmenu_edit_command">Edit command</string>
    <string name="cmenu_edit_comment">Edit comment</string>
    <string name="cmenu_edit_style">Edit style</string>
    <string name="cmenu_edit_states">Edit states</string>
    <string name="cmenu_edit_state_query">Edit state query command</string>
    <string name="cmenu_edit_state_labels">Edit state labels</string>
    <string name="cmenu_edit_state_icons">Edit state icons</string>
    <string name="cmenu_edit_state_styles">Edit state styles</string>
    <string name="cmenu_edit_state_commands">Edit state commands</string>
    <string name="cmenu_show_state">Show current state</string>
    <string name="cmenu_edit_state_list">Edit chooser list</string>
    <string name="toast_edit_label">Updated label.</string>
    <string name="toast_edit_command">Updated command.</string>
    <string name="toast_edit_command_error">Input line could not be left blank.</string>
    <string name="toast_edit_iconid">Updated icon Id.</string>
    <string name="toast_edit_iconid_error">No valid icon Id.</string>
    <string name="toast_edit_comment">Updated comment.</string>
    <string name="toast_edit_style">Updated style.</string>
    <string name="toast_edit_states">Updated states.</string>
    <string name="toast_edit_states_query">Updated state query command.</string>
    <string name="toast_edit_states_labels">Updated state labels.</string>
    <string name="toast_edit_states_icons">Updated state icons.</string>
    <string name="toast_edit_states_styles">Updated state styles.</string>
    <string name="toast_edit_states_commands">Updated state commands.</string>
    <string name="toast_edit_states_list">Updated chooser list.</string>
    <string name="button_state_undefined">No valid state received yet.</string>
    <string name="toast_no_comment">No comment attached.</string>
    <string name="toast_broadcast_command">AVRDroid broadcast receiver active.</string>  
    <string name="wifi_not_avaiable">Wifi network connection is not available. </string>
    <string name="cmenulist_delete">Delete layout</string>
    <string name="cmenulist_rename">Rename layout</string>
    <string name="cmenulist_select">Select layout</string>
    <string name="toast_list_delete">Layout deleted.</string>
    <string name="toast_list_rename">Layout renamed.</string>
    <string name="dialog_import_showlog">Show log</string>
    <string name="dialog_title_showlog">XML parser error log</string>
    <string name="dialog_import_valid_layout">This XML layout contains:\n</string>
    <string name="dialog_title_reconnect">No connection</string>
    <string name="button_reconnect">Try reconnect</string>
    <string name="dialog_text_reconnect">Automatic reconnect is done with every remote button press as well.</string>
    <string name="keepscreenon_true">Screen lock ON.</string>
    <string name="keepscreenon_false">Screen lock OFF.</string>
    <string name="dialog_overwrite">Layout already exists</string>
    <string name="dialog_bt_overwrite">Overwrite</string>
    <string name="dialog_command_select">Choose:</string>
    <string name="pref_cat_volumekeys">Volume Keys Navigation</string>
    <string name="pref_cat_volumekeys_volup">Volume Up key</string>
	<string name="pref_cat_volumekeys_volup_default">Default</string>
    <string name="pref_cat_volumekeys_volup_summary">Set the action for the Volume Up key</string>
    <string name="pref_cat_volumekeys_volup_custom">Customize Volume Up key</string>
    <string name="pref_cat_volumekeys_volup_custom_summary">Enter custom AVR command for the Volume Up key</string>
    <string name="pref_cat_volumekeys_voldown">Volume Down key</string>
    <string name="pref_cat_volumekeys_voldown_default">Default</string>
    <string name="pref_cat_volumekeys_voldown_summary">Set the action for the Volume Down key</string>
    <string name="pref_cat_volumekeys_voldown_custom">Customize Volume Down key</string>
    <string name="pref_cat_volumekeys_voldown_custom_summary">Enter custom AVR command for the Volume Down key</string>
    <string name="pref_cat_volumekeys_volup_custom_default">MVUP</string>
    <string name="pref_cat_volumekeys_voldown_custom_default">MVDOWN</string>
</resources>